# fad

./: .gitignore  Fad.hs  LICENSE  README  Test.hs  fad.cabal  hcar.tex
List/: Util.hs  Uttl.hs
Numeric/: FAD.hs  Fad.hs
