Name:                fad
Version:             0.0.1
License:             GPL
Copyright:           Barak A. Pearlmutter and Jeffrey Mark Siskind 2008-2009
Author:              Barak A. Pearlmutter and Jeffrey Mark Siskind
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           mostly stable
Homepage:            http://dimensional.googlecode.com/
Synopsis:            Forward Automatic Differentiation.
Description:
    Forward Automatic Differentiation via overloading to perform
    nonstandard interpretation that replaces original numeric type with
    corresponding dual number type.
    Existential type "branding" is used to prevent perturbation confusion.
Category:            Math
Build-Type:          Simple
Build-Depends:       base
Exposed-Modules:     Fad
 
